infra/cfn/networking.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: networking for cluster to live in

Parameters:
  App:
    Type: String
    Default: roommate

  Env:
    Type: String
    AllowedValues:
      - prod
      - dev
    Default: dev

  VpcCidr:
    Type: String
    Default: 10.8.0.0/16

  SubnetCidrBits:
    Type: Number
    Default: 14
    Description: bits to add to subnet mask

Conditions:
  IsProd: !Equals [!Ref Env, "prod"]

Resources:
  # vpc
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${App}-vpc-${Env}"

  # subnets
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Select
        - 0
        - !Cidr
          - !GetAtt Vpc.CidrBlock
          - 4
          - !Ref SubnetCidrBits
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${App}-subnet-private-1-${Env}"
        - Key: karpenter.sh/discovery
          Value: !Sub "${App}-${Env}"
        - Key: !Sub "kubernetes.io/cluster/${App}-eks-cluster-${Env}"
          Value: shared

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Select
        - 1
        - !Cidr
          - !GetAtt Vpc.CidrBlock
          - 4
          - !Ref SubnetCidrBits
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${App}-subnet-private-2-${Env}"
        - Key: karpenter.sh/discovery
          Value: !Sub "${App}-${Env}"
        - Key: !Sub "kubernetes.io/cluster/${App}-eks-cluster-${Env}"
          Value: shared

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Select
        - 2
        - !Cidr
          - !GetAtt Vpc.CidrBlock
          - 4
          - !Ref SubnetCidrBits
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${App}-subnet-public-1-${Env}"
        - Key: kubernetes.io/role/elb
          Value: 1
        - Key: !Sub "kubernetes.io/cluster/${App}-eks-cluster-${Env}"
          Value: shared

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Select
        - 3
        - !Cidr
          - !GetAtt Vpc.CidrBlock
          - 4
          - !Ref SubnetCidrBits
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${App}-subnet-public-2-${Env}"
        - Key: kubernetes.io/role/elb
          Value: 1
        - Key: !Sub "kubernetes.io/cluster/${App}-eks-cluster-${Env}"
          Value: shared

  # igw
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${App}-igw-${Env}"

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  # nat
  NatEip1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  
  NatEip2:
    Type: AWS::EC2::EIP
    Condition: IsProd
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEip1.AllocationId
      SubnetId: !Ref PublicSubnet1
      ConnectivityType: public
      Tags:
        - Key: Name
          Value: !Sub "${App}-nat-1-${Env}"
  
  NatGateway2:
    Type: AWS::EC2::NatGateway
    Condition: IsProd
    Properties:
      AllocationId: !GetAtt NatEip2.AllocationId
      SubnetId: !Ref PublicSubnet2
      ConnectivityType: public
      Tags:
        - Key: Name
          Value: !Sub "${App}-nat-2-${Env}"
  
  # route tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${App}-public-rt-${Env}"

  PublicDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
   
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
  
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${App}-private-rt-1-${Env}"
  
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Condition: IsProd
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub "${App}-private-rt-2-${Env}"
  
  PrivateDefaultRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  
  PrivateDefaultRoute2:
    Type: AWS::EC2::Route
    Condition: IsProd
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
  
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !If
        - IsProd
        - !Ref PrivateRouteTable2
        - !Ref PrivateRouteTable1

Outputs:
  VpcId:
    Value: !Ref Vpc
    Export:
      Name: !Sub "${AWS::StackName}-VpcId"
  PrivateSubnet1Id:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet1Id"
  PrivateSubnet2Id:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnet2Id"
  PublicSubnet1Id:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnet1Id"
  PublicSubnet2Id:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PublicSubnet2Id"
